crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/storage_layout_base_slot/constant_member_access/generated/solc/0.8.29-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6396] Error: The base slot of the storage layout must evaluate to a rational number.
    ╭─[input.sol:10:27]
    │
 10 │ contract C is A layout at A.X {}
    │                           ─┬─  
    │                            ╰─── Error occurred here.
────╯
